:sparkles: implement DELETE /api/unlink
